chore: update workflow to run on pr and push to main

--- a/.github/workflows/check-on-push.yaml
+++ b/.github/workflows/check-on-push.yaml
@@ -1,10 +1,15 @@
 ﻿name: Run tests & build on push
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
