--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DomainLibrary\DomainLibrary.csproj" />
+    </ItemGroup>
+
 </Project>
