--- a/SyntaxAnalyze/SyntaxAnalyze.csproj
+++ b/SyntaxAnalyze/SyntaxAnalyze.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DomainLibrary\DomainLibrary.csproj" />
+    </ItemGroup>
+
 </Project>
